--- a/templates/endpoint.template
+++ b/templates/endpoint.template
@@ -1,8 +1,11 @@
 // Import classes
 import { Endpoints } from "src/classes/Endpoints";
 
-const testEndpoints = new Endpoints("ENDPOINT_NAME");
+const [ROOT_ENDPOINT_NAME]Endpoints = new Endpoints("[ROOT_ENDPOINT_NAME]");
 
-// Add handler
+// Add your handlers here
+[ROOT_ENDPOINT_NAME]Endpoints.createHandler("").get((req, res) => {
+  return "Hello from [ROOT_ENDPOINT_NAME] root endpoint";
+});
 
-export default testEndpoints;
+[ENDPOINTS]export default [ROOT_ENDPOINT_NAME]Endpoints;
