Add template for Sequelize setup and Sequelize model

--- a/src/app.config.json
+++ b/src/app.config.json
@@ -3,7 +3,9 @@
   "hostname": "localhost",
   "unListedEndpointsDir": ["index.ts"],
   "folders": {
-    "endpoints": "endpoints"
+    "templates": "templates",
+    "endpoints": "endpoints",
+    "databases": "databases"
   },
   "origins": ["*"]
 }
