--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "module-alias": "^2.2.3",
+    "mongoose": "^8.8.4",
+    "mysql2": "^3.11.5",
     "path-to-regexp": "^8.2.0",
+    "sequelize": "^6.37.5",
     "ts-node": "^10.9.2"
   },
   "_moduleAliases": {
