--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@ node_modules
 
 package-lock.json
 
-*/secrets/*
-
 # Ignore file README.md in Git Ignore :D
 !*/**/README.md
+
+# Ignore env
+.env.*
+
+# Ignore some keys
+secrets/*.key.*
