Update template for Mongoose; Add LoggerBuilder

--- a/_templates/sequelize-setup.template
+++ b/_templates/sequelize-setup.template
@@ -9,6 +9,9 @@ import { DirReader } from "src/classes/DirReader";
 import AppConfig from "src/app.config.json";
 import DatabaseConfig from "src/db.config.json";
 
+// Import types
+import type { Model, ModelStatic } from "sequelize";
+
 // Get specific configuration for database
 const database = DatabaseConfig.databases[[INDEX]];
 
@@ -35,11 +38,13 @@ const databaseEngine = database.engine
   ? database.engine
   : process.env[`${uppercasedDatabaseName}_ENGINE`];
 
-export type ModelCollectionType = { [key: string]: Model };
+export type IdentityModelsType = {
+  Example: ModelStatic<Model>;
+};
 
-export default async function () {
-  const models = {};
+const _models = {};
 
+export default function () {
   const sequelize = new Sequelize(
     databaseName!,
     databaseUsername!,
@@ -49,31 +54,34 @@ export default async function () {
       dialect: databaseEngine as Dialect,
     }
   );
-  const modelFilePaths = await reader.getAllPathsToFiles(rootPath);
 
-  for (const modelFilePath of modelFilePaths) {
-    const modelDefault = require(modelFilePath);
+  if (Object.keys(_models).length === 0) {
+    const modelFilePaths = reader.getAllPathsToFilesSync(rootPath);
 
-    if (!modelDefault.default)
-      throw new Error("Model should be exported as default.");
+    for (const modelFilePath of modelFilePaths) {
+      const modelDefault = require(modelFilePath);
 
-    const model = modelDefault.default;
+      if (!modelDefault.default)
+        throw new Error("Model should be exported as default.");
 
-    // Init
-    const result = model(sequelize, DataTypes);
-    (models as any)[result.name] = result;
-  }
+      const model = modelDefault.default;
 
-  // Use another for loop to check associations
-  // Note: `associations` config only exists in SQL
-  for (const key in models) {
-    if (
-      (models as any)[key].associate &&
-      typeof (models as any)[key].associate === "function"
-    ) {
-      (models as any)[key].associate(models, database.objects);
+      // Init
+      const result = model(sequelize, DataTypes);
+      (_models as any)[result.name] = result;
+    }
+
+    // Use another for loop to check associations
+    // Note: `associations` config only exists in SQL
+    for (const key in _models) {
+      if (
+        (_models as any)[key].associate &&
+        typeof (_models as any)[key].associate === "function"
+      ) {
+        (_models as any)[key].associate(_models, database.objects);
+      }
     }
   }
 
-  return models;
+  return _models as IdentityModelsType;
 }
