--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "mysql2": "^3.11.5",
     "path-to-regexp": "^8.2.0",
     "sequelize": "^6.37.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.17.0"
   },
   "_moduleAliases": {
     "src": "./src"
