--- a/server/src/app.config.json
+++ b/server/src/app.config.json
@@ -1,5 +1,6 @@
 {
   "port": 3000,
+  "app": "task-service",
   "hostname": "0.0.0.0",
   "unListedEndpointsDir": ["index.ts"],
   "folders": {
@@ -14,5 +15,6 @@
       "value": "15",
       "postfix": "m"
     }
-  }
+  },
+  "logRoot": "../"
 }
