--- a/_templates/mongoose-setup.template
+++ b/_templates/mongoose-setup.template
@@ -4,9 +4,17 @@ import mongoose, { Model } from "mongoose";
 // Import classes
 import { DirReader } from "src/classes/DirReader";
 
+// Import logger builder
+import { LoggerBuilder } from "src/logger";
+
 // Import configs
 import AppConfig from "src/app.config.json";
 import DatabaseConfig from "src/db.config.json";
+
+// Start log
+LoggerBuilder.Logger.info(
+  `Starting setup ORM of ${DatabaseConfig.databases[[INDEX]].name}.`
+);
 
 const database = DatabaseConfig.databases[[INDEX]];
 
@@ -33,6 +41,13 @@ const databaseEngine = database.engine
   ? database.engine
   : process.env[`${uppercasedDatabaseName}_ENGINE`];
 
+LoggerBuilder.Logger.info(
+  `Setup ORM of ${DatabaseConfig.databases[[INDEX]].name} done. Database: ${databaseName}; Host: ${databaseHost}; Engine: ${databaseEngine}.`
+);
+LoggerBuilder.Logger.info(
+  `ORM of ${DatabaseConfig.databases[[INDEX]].name} is ready to used.`
+);
+
 export type TaskManagerModelsType = {
   Example: Model<any>;
 };
@@ -42,9 +57,16 @@ const _models = {};
 export default async function () {
   const connectionString = `mongodb://${databaseUsername}:${databasePassword}@${databaseHost}:27017/${databaseName}`;
 
-  await mongoose.connect(connectionString, {
-    authSource: "admin",
-  });
+  LoggerBuilder.Logger.info(`Try to connect to database ${databaseName}.`);
+
+  mongoose
+    .connect(connectionString, {
+      authSource: "admin",
+    })
+    .catch((error) => {
+      LoggerBuilder.Logger.error(error.message);
+      process.exit(1);
+    });
 
   if (Object.keys(_models).length === 0) {
     const modelFilePaths = reader.getAllPathsToFilesSync(rootPath);
@@ -61,7 +83,14 @@ export default async function () {
       const result = model();
       (_models as any)[result.name] = result.model;
     }
+    LoggerBuilder.Logger.info(
+      `Build model done. Total of models is ${Object.keys(_models).length}.`
+    );
   }
+
+  LoggerBuilder.Logger.info(
+    `All ORM Models of ${DatabaseConfig.databases[[INDEX]].name} are ready to used.`
+  );
 
   return _models as TaskManagerModelsType;
 }
