--- a/_templates/sequelize-setup.template
+++ b/_templates/sequelize-setup.template
@@ -5,12 +5,20 @@ import { Sequelize, DataTypes, Dialect } from "sequelize";
 // Import classes
 import { DirReader } from "src/classes/DirReader";
 
+// Import logger builder
+import { LoggerBuilder } from "src/logger";
+
 // Import configs
 import AppConfig from "src/app.config.json";
 import DatabaseConfig from "src/db.config.json";
 
 // Import types
 import type { Model, ModelStatic } from "sequelize";
+
+// Start log
+LoggerBuilder.Logger.info(
+  `Starting setup ORM of ${DatabaseConfig.databases[[INDEX]].name}.`
+);
 
 // Get specific configuration for database
 const database = DatabaseConfig.databases[[INDEX]];
@@ -38,6 +46,13 @@ const databaseEngine = database.engine
   ? database.engine
   : process.env[`${uppercasedDatabaseName}_ENGINE`];
 
+LoggerBuilder.Logger.info(
+  `Setup ORM of ${DatabaseConfig.databases[[INDEX]].name} done. Database: ${databaseName}; Host: ${databaseHost}; Engine: ${databaseEngine}.`
+);
+LoggerBuilder.Logger.info(
+  `ORM of ${DatabaseConfig.databases[[INDEX]].name} is ready to used.`
+);
+
 export type IdentityModelsType = {
   Example: ModelStatic<Model>;
 };
@@ -45,6 +60,7 @@ export type IdentityModelsType = {
 const _models = {};
 
 export default function () {
+  LoggerBuilder.Logger.info(`Try to connect to database ${databaseName}.`);
   const sequelize = new Sequelize(
     databaseName!,
     databaseUsername!,
@@ -54,6 +70,11 @@ export default function () {
       dialect: databaseEngine as Dialect,
     }
   );
+
+  sequelize.authenticate().catch((error) => {
+    LoggerBuilder.Logger.error(error.message);
+    process.exit(1);
+  });
 
   if (Object.keys(_models).length === 0) {
     const modelFilePaths = reader.getAllPathsToFilesSync(rootPath);
@@ -71,6 +92,10 @@ export default function () {
       (_models as any)[result.name] = result;
     }
 
+    LoggerBuilder.Logger.info(
+      `Build model done. Total of models is ${Object.keys(_models).length}.`
+    );
+
     // Use another for loop to check associations
     // Note: `associations` config only exists in SQL
     for (const key in _models) {
@@ -81,6 +106,11 @@ export default function () {
         (_models as any)[key].associate(_models, database.objects);
       }
     }
+
+    LoggerBuilder.Logger.info("Build model associations done.");
+    LoggerBuilder.Logger.info(
+      `All ORM Models of ${DatabaseConfig.databases[[INDEX]].name} are ready to used.`
+    );
   }
 
   return _models as IdentityModelsType;
